# ITO-competition

./: README.md  eslint.config.mjs  next-env.d.ts  package.json  pnpm-lock.yaml  版权与开源借鉴声明.md
backend/: config.yaml  docker-compose.yml  requirements.txt  start.bat
backend/src/rag/: __init__.py  api_server.py  bootstrap.py  cli.py  config.py  courseware_pipeline.py  docx_generator.py  docx_preview.py  evidence_renderer.py  image_matcher.py  ppt_generator.py  ppt_preview.py  rag_engine.py  schemas.py  service.py  ui_gradio.py
backend/src/rag/api/: __init__.py  server.py
backend/src/rag/dialogue/: __init__.py  dialogue_manager.py  intent_extractor.py  prompts.py  reference_handler.py  role_discussion.py
backend/src/rag/domain/: __init__.py  contracts.py  models.py
backend/src/rag/embedder/: __init__.py  base.py  bge_m3.py
backend/src/rag/game/: __init__.py  animation_renderer.py  export_utils.py  game_engine.py  (+2 more)
digital-human/: pyproject.toml
digital-human/avatar_service/: __init__.py  main.py
digital-human/avatar_service/core/: __init__.py  command_router.py  config.py  script_normalizer.py  script_planner.py  session_manager.py  state_controller.py  task_manager.py
digital-human/avatar_service/models/: __init__.py  enums.py  schemas.py
digital-human/avatar_service/services/: __init__.py  avatar.py  storage.py  tts.py
frontend/: .env.example  components.json  next.config.ts  tsconfig.json
frontend/configs/: animation.ts  chart.ts  element.ts  font.ts  hotkey.ts  image-clip.ts  latex.ts  lines.ts  mime.ts  shapes.ts  storage.ts  symbol.ts  theme.ts
(+36 files in other folders)
