[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avatar-service"
version = "0.1.0"
description = "Deterministic avatar speech task service based on FastAPI and edge-tts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=6.1,<7.0",
    "fastapi>=0.115,<1.0",
    "pydantic>=2.7,<3.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
include = ["avatar_service*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
